cfn.yml
AWSTemplateFormatVersion: 2010-09-09
​
Description: A simple AWS Roman numerals converter app
 
​
Parameters: 
  latestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64'
​
  keyName:
    Description: Chose your key pair
    Type: AWS::EC2::KeyPair::KeyName
    Default: x-pair
​
Resources:
  myWebServer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref latestAmiId
      InstanceType: t2.micro
      KeyName: !Ref keyName
      SecurityGroupIds: 
        - !Ref mySecGrp
      Tags: 
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack 
      UserData: !Base64 |
        #! /bin/bash
        yum update -y
        yum install python3 -y
        yum install python3-pip -y
        pip3 install flask
        yum install git -y
        cd /home/ec2-user
        wget -P templates https://raw.githubusercontent.com/tahiraydin/roman_numerals/main/templates/index.html
        wget -P templates https://raw.githubusercontent.com/tahiraydin/roman_numerals/main/templates/result.html
        wget https://raw.githubusercontent.com/tahiraydin/roman_numerals/main/app.py
        python3 app.py
​
  mySecGrp:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ssh http and port 8080 # Required
      GroupName: taydinsecgrpromen
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
  
Outputs:
  WebsiteURL:
    Value: !Sub 
      - http://${PIA}
      - PIA: !GetAtt myWebServer.PublicDnsName
    Description: Roman Numerals Converter Application URL
